--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Memory Card Game</h1>
+    <p>Hello World</p>
     <div class="game-board" id="gameBoard"></div>
     
     <script src="script.js"></script>
